# Weather-App

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  bob.sh  main.cpp  weather_app
HttpHandler/: CMakeLists.txt
HttpHandler/inc/: curlp_pp.h  handler.h
HttpHandler/src/: handler.cpp
Parser/: CMakeLists.txt
Parser/inc/: parser.h
Parser/src/: parser.cpp
Weather/: CMakeLists.txt
Weather/inc/: weather_man.h
Weather/src/: weather_man.cpp
inc/: curlp_pp.h  parser.h  services.h  user_input.h
